# lno0x0c

./: .project  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/fiaxco/nativek0x09/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  asthma-predict.cpp  compute-mfcc-feats.cpp  lno-lib.cpp
app/src/main/cpp/header/: compute-mfcc-feats.h  feat-util.h
app/src/main/cpp/header/kaldi/base/: kaldi-common.h  kaldi-types.h
app/src/main/cpp/header/kaldi/matrix/: kaldi-blas.h
app/src/main/java/com/fiaxco/lno0x0c/: CatalogActivity.java  RecordActivity.java
app/src/main/java/com/fiaxco/lno0x0c/services/: BluetoothService.java  BluetoothStuff.java  LnoHandler.java  TimerService.java
app/src/main/java/com/fiaxco/nativek0x09/: MainActivity.java
app/src/main/res/drawable/: bluetooth_connected_24.xml  native_logo.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/test/java/com/fiaxco/nativek0x09/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
